Cargando team challenge

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img src="./assets/img/Pokemon_logo.svg.png" alt="Pokemon" class="poke-logo">
     </header>
 
-    <input type="text" id="searchInput" placeholder="Search Pokemon">
+    <input type="text" id="searchInput" placeholder="Search Pokemon" value="">
     <button id="searchBtn">Search</button>
     <button id="prevBtn">Previous</button>
     <button id="nextBtn">Next</button>
